# FishFinder

./: .gitignore  convert_MHT.py  convert_to_mscoco.py  correct_detections.py  cvt_mscoco_test.py  error_visualize.py  evalfeatures.py  fishdataset.py  generate_dataset.py  markup_vis.py  package_dataset.py  poetry.toml  pyproject.toml  requirements.txt  train.py  utils.py
data/NRTSample/: sample_list.txt
data/NRTSample/20140711121827/: info.txt
data/NRTSample/20140711121827/Detections/: 007010.txt  007011.txt  007012.txt  007013.txt  007026.txt  007027.txt  007028.txt  007029.txt  007030.txt  007031.txt  007032.txt  007033.txt  007034.txt  007035.txt  007036.txt  007037.txt  007038.txt  007081.txt  007082.txt  007083.txt  007084.txt  007085.txt  007086.txt  007087.txt  007088.txt  007089.txt  007090.txt  007091.txt
data/tests/NRTFish/: test_List.txt
data/tests/NRTFish/314159265358979_test/Detections/: 000001.txt
features/: __init__.py  generate_features.py
features/utils/: augmentation_utils.py  guide_history.py
fishfinder/: convert_MHT.py  convert_to_mscoco.py  correct_detections.py  evalfeatures.py  fishdataset.py  generate_dataset.py  package_dataset.py  renumber_annotations.py  visualize_gt.py
fishfinder/features/models/: deeplab101_FPN.py  deeplab101_resnetfeatures.py
fishfinder/features/utils/: davis_eval_guide_sequence.py  davis_utils.py  logger.py  model_utils.py  transform_utils.py
tests/: cvt_mscoco_test.py
