[tool.poetry]
name = "FishFinder"
version = "1.0.0"
description = "Finding Oregon Benthos"
authors = ["Alrik Firl <afirlortwo@gmail.com>"]

[tool.poetry.dependencies]
python       = "^3.8"
numpy        = "*"
pyparsing    = "*"
torch        = "*"
torchvision  = "*"
Pillow       = ">6.2.2"
scipy        = "*"
docopt        = "*"
opencv-python = "*"

[tool.poetry.dev-dependencies]
pytest      = "^5.2"
ipython     = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
